<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/imV_back"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingVertical="2dp"
                android:text="@string/edit_profile"
                android:textSize="22sp"
                android:textColor="@color/blue2"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@color/white"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:paddingVertical="1dp"
                android:background="@color/white"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:maxWidth="600dp">

        <RelativeLayout
            android:id="@+id/avatar_layout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imv_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar_alt"
                app:shapeAppearanceOverlay="@style/Circle" />

            <ImageView
                android:id="@+id/imv_camera"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/ic_camera" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toBottomOf="@id/avatar_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxStrokeColor="@color/blue2"
            app:boxStrokeErrorColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:enabled="false"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:paddingVertical="0dp"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_fullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/layout_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxStrokeColor="@color/blue2"
            app:boxStrokeErrorColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_fullName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/fullname"
                android:inputType="text"
                android:paddingVertical="0dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/layout_fullName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxStrokeColor="@color/blue2"
            app:boxStrokeErrorColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingVertical="0dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/border_button_fill"
            android:gravity="center"
            android:text="@string/update"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/layout_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/btn_change_password"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/border_button"
            android:gravity="center"
            android:text="@string/change_password"
            android:textAllCaps="true"
            android:textColor="@color/blue2"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/btn_update"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"/>
</LinearLayout>
